[package]
name = "equilibrium"
version = "0.1.0-alpha"
edition = "2021"
description = "A framework for creating distributed control systems"
readme = "README.md"
repository = "https://github.com/PoorRican/equilibrium"
license = "MIT"
license-file = "LICENSE"
keywords = ["control", "distributed", "aquaponics", "hydroponics", "bioreactor"]
categories = ["science", "embedded", "hardware-support"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1" , features = ["full"] }